--- a/src/app/clientes/indique-ganhe/indique-ganhe.component.css
+++ b/src/app/clientes/indique-ganhe/indique-ganhe.component.css
@@ -252,7 +252,7 @@
 }
 
 .lista-indicados-container > div {
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid;
     margin-bottom: 8px;
     padding-bottom: 8px;
 }
@@ -285,7 +285,6 @@
 .vertical-progress-container {
     position: relative;
     width: 300px;
-    height: 100vh;
     overflow: hidden;
 }
 
