--- a/src/app/clientes/indique-ganhe/indique-ganhe.component.html
+++ b/src/app/clientes/indique-ganhe/indique-ganhe.component.html
@@ -253,7 +253,7 @@
         <div class="titulo">{{'indique_ganhe.minhasIndicacoes' | translate}}</div>
         <div class="botao-direito"></div>
     </div>
-    <div class="modal-body" style="min-height: 80%; padding: 15px 10px;">
+    <div class="modal-body" style="padding: 15px 10px;">
         <div [ngStyle]="{'padding-bottom': '30px', 'margin-bottom': '20px', 'border-bottom': '1px dashed #3d3d3d'}">
             <h2 [ngStyle]="{'font-size': '32px', 'font-weight': '600', 'text-align': 'center'}">{{ indicadoSelecionado.valor_comissao | currency }}</h2>
             <h2 [ngStyle]="{'font-size': '14px', 'text-align': 'center'}">{{ 'geral.saldo' | translate }} {{ translateStatus(indicadoSelecionado.status) | lowercase }}</h2>
