--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -10,6 +10,18 @@
     margin: 0 auto;
 }
 
+
+.aviso{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+}
+
+.aviso h4{
+    margin: 20px;
+}
+
 iframe{
     width: 100%;
     border:none;
@@ -87,6 +99,7 @@ iframe{
     height: calc(100vh - 63px);
     margin: 0;
 }
+
 
 @media only screen and (max-width: 1024px) {
     .game-view {
