--- a/src/app/casino/gameview/gameview.component.html
+++ b/src/app/casino/gameview/gameview.component.html
@@ -11,20 +11,26 @@
             <a (click)="back()" class="btn-cassino game-close"><i class="fa fa-times"></i></a>
         </div>
     </div>
-    <div *ngIf="!bloquearGame" class="game-frame">
-        <app-spinner *ngIf="showLoadingIndicator"></app-spinner>
-        <ng-container *ngIf="mobileScreen">
-            <iframe *ngIf="gameUrl!=''"  [src]="gameUrl"></iframe>
-        </ng-container>
-        <ng-container *ngIf="!mobileScreen">
-            <iframe *ngIf="gameUrl!=''"  [src]="gameUrl" allowfullscreen></iframe>
-        </ng-container>
+    <ng-container  *ngIf="!bloquearGame">
+        <div class="game-frame">
+            <app-spinner *ngIf="showLoadingIndicator"></app-spinner>
+            <ng-container *ngIf="mobileScreen">
+                <iframe *ngIf="gameUrl!=''"  [src]="gameUrl"></iframe>
+            </ng-container>
+            <ng-container *ngIf="!mobileScreen">
+                <iframe *ngIf="gameUrl!=''"  [src]="gameUrl" allowfullscreen></iframe>
+            </ng-container>
 
-    </div>
-    <div *ngIf="bloquearGame" class="game-frame">
-        <span>JOGO BLOQUEADO</span>
-    </div>
+        </div>
+    </ng-container>
+    <ng-container *ngIf="bloquearGame">
+        <div  class="game-frame aviso">
+            <h2><i style="font-size: 100px; color: red" class="fa fa-exclamation-triangle fa-6" aria-hidden="true"></i></h2>
+            <h4>Atenção!! Você possui um bônus de cassino ativo, para apostar nesse jogo será necessário cancelar o bônus. </h4>
+        </div>
+    </ng-container>
 </div>
 
 
 
+ã
