--- a/src/app/casino/gameview/gameview.component.html
+++ b/src/app/casino/gameview/gameview.component.html
@@ -27,6 +27,8 @@
         <div  class="game-frame aviso">
             <h2><i style="font-size: 100px; color: red" class="fa fa-exclamation-triangle fa-6" aria-hidden="true"></i></h2>
             <h4>Atenção!! Você possui um bônus de cassino ativo, para apostar nesse jogo será necessário cancelar o bônus. </h4>
+            <a [routerLink]="['/clientes/rollover']" class="btn btn-xs game-button-play">Ver Bônus</a>
+<!--             <a (click)="abrirRollovers()" class="btn btn-xs game-button-play">Ver Bônus</a>&ndash;&gt;-->
         </div>
     </ng-container>
 </div>
