--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
@@ -57,7 +57,7 @@
                             <div class="col col-sm-3 saque-pix">
                                 <div class="form-group group-buttons">
                                     <button type="submit" class="btn btn-custom solicitar-saque" [ngClass]="{'btn-block': isMobile}"
-                                            [disabled]="submitting">
+                                            [disabled]="submitting"  [disabled]="disableButtom">
                                         {{'geral.sacar' | translate}}
                                     </button>
                                 </div>
