--- a/src/app/clientes/deposito/pix/deposito-pix.component.html
+++ b/src/app/clientes/deposito/pix/deposito-pix.component.html
@@ -2,8 +2,8 @@
     <div class="col-md-6 col-sm-12">
         <div class="alert alert-success alert-dismissible" *ngIf="exibirMensagemPagamento">
             {{'deposito.seuPixFoiCreditado' | translate:{'novoSaldo': novoSaldo} }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+            <button type="button" class="btn-close close" data-dismiss="alert" aria-label="Close">
+                <span class="close-x" aria-hidden="true">&times;</span>
             </button>
         </div>
     </div>
