--- a/src/app/clientes/rollover/rollover.component.html
+++ b/src/app/clientes/rollover/rollover.component.html
@@ -95,7 +95,7 @@
                                     {{rollover.valorGasto | currency}}
                                 </td>
                                 <td class="custom-td">
-                                    {{rollover.valorMeta | currency}}ú
+                                    {{rollover.valorMeta | currency}}
                                 </td>
                                 <td class="custom-td">
                                     {{rollover.cotacaoMinSimples}} (Simples) / {{rollover.cotacaoMinMultipla}} (Múltipla)
