--- a/src/app/clientes/rollover/rollover.component.html
+++ b/src/app/clientes/rollover/rollover.component.html
@@ -61,7 +61,7 @@
                         <ng-container *ngFor="let rollover of rollovers">
                             <tr>
                                 <td>
-                                    <i style="color:orange; margin-right: 5px; margin-left: 5px;" class="fa fa-circle"ú
+                                    <i style="color:orange; margin-right: 5px; margin-left: 5px;" class="fa fa-circle"
                                     *ngIf="rollover.status === 'ativo'"></i>
                                     <i style="color:green; margin-right: 5px; margin-left: 5px;" class="fa fa-circle"
                                     *ngIf="rollover.status === 'completado'"></i>
