ajuste no tamanho da imagem dentro do modal, caso a imagem seja muito grande

--- a/src/app/shared/layout/modals/recarga-success-modal/recarga-success-modal.component.html
+++ b/src/app/shared/layout/modals/recarga-success-modal/recarga-success-modal.component.html
@@ -8,7 +8,7 @@
 <div class="modal-body">
     <div class="informacoes" #cupom>
         <div class="title">
-            <img class="" [src]="LOGO"  alt="">
+            <img [ngStyle]="{'max-width': '220px'}" [src]="LOGO"  alt="">
             <h3>Comprovante de Recarga</h3>
         </div>
 
