modal jogos liberados

--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -5,6 +5,10 @@
 
 }
 
+.aviso h4{
+    margin: 40px !important;
+}
+
 .game-frame {
     width: 94%;
     margin: 0 auto;
@@ -22,13 +26,32 @@
     margin: 20px;
 }
 
-.game-button-play {
+.acoes{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.ver-bonus {
     margin: 20px;
     display: flex !important;
     justify-content: center;
     align-items: center;
     color: var(--header);
     background-color: var(--highlight);
+    width: 150px;
+    height: 42px;
+}
+
+.ver-jogos {
+    margin: 20px;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    border: var(--highlight);
+    color: var(--highlight);
+    border-style: solid;
+    border-width: 1px;
     width: 150px;
     height: 42px;
 }
