--- a/src/app/shared/layout/modals/jogos-liberados-bonus-modal/jogos-liberados-bonus-modal.component.html
+++ b/src/app/shared/layout/modals/jogos-liberados-bonus-modal/jogos-liberados-bonus-modal.component.html
@@ -1,7 +1,7 @@
 <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">Jogos liberados para realização de apostas com bônus</h4>
     <div class="action-buttons">
-        <button type="button" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
+        <button type="button" aria-label="Close" (click)="voltarModalRegras()">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
