--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -41,35 +41,26 @@
         <ng-container *ngTemplateOutlet="menuTemplate"></ng-container>
     </nav>
     <div class="side side-right">
-        <div class="btn-group language-dropdown hide-mobile" ngbDropdown>
-            <button class="btn" type="button" id="dropdownLanguage" ngbDropdownToggle>
-                <span class="flag-icon {{linguagemSelecionada === 'pt' ? 'flag-icon-br' : 'flag-icon-us'}} flag-icon-squared"></span>
-            </button>
-            <div class="language-dropdown-menu position-absolute" aria-labelledby="dropdownLanguage" ngbDropdownMenu>
-                <a class="m-2 p-0 dropdown-item" (click)="useLanguage('pt')">
-                    <span class="flag-icon flag-icon-br flag-icon-squared"></span>
-                    {{'geral.portugues' | translate}}
-                </a>
-                <a class="m-2 p-0 dropdown-item" (click)="useLanguage('en')">
-                    <span class="flag-icon flag-icon-us flag-icon-squared"></span>
-                    {{'geral.ingles' | translate}}
+        <ng-container *ngIf="isLoggedIn; else loggedOut">
+            <div class="deposit-shortcut" *ngIf="modoClienteAtivo && isCliente">
+                <a class="btn btn-custom mr-4" [routerLink]="['clientes/deposito']" [ngStyle]="{'height': '38px'}">
+                    {{'geral.depositar' | translate | uppercase}}
                 </a>
             </div>
-        </div>
-
-        <ng-container *ngIf="isLoggedIn; else loggedOut">
             <div class="menu-conta" ngbDropdown #dropDownConta="ngbDropdown">
-                <i class="fa olhinho" style="margin-right: 8px;" (click)="alternarExibirSaldo()" [ngClass]="{'fa-eye-slash': mostrarSaldo,'fa-eye': !mostrarSaldo}"></i>
                 <a (click)="getPosicaoFinanceira()" class="nav-link menu-perfil" id="navbarDropdown"
                    role="button" ngbDropdownToggle>
-                    <div>
+                    <div class="user-card">
                         <span class="nome-usuario">{{ usuario.nome | titlecase }}</span>
                         <span class="saldo-usuario">
+                            <i class="fa olhinho" style="margin-right: 8px;" (click)="alternarExibirSaldo()" [ngClass]="{'fa-eye-slash': mostrarSaldo,'fa-eye': !mostrarSaldo}"></i>
                             <span id="olhinho" *ngIf="mostrarSaldo; else elseSaldoOculto">{{ posicaoFinanceira.saldo | currency }}</span>
                             <ng-template #elseSaldoOculto> R$ &bull; &bull; &bull; &bull; </ng-template>
                         </span>
                     </div>
-                    <img src="https://cdn.wee.bet/img/blank-profile-picture.png" alt="">
+                    <div class="user-icon">
+                        <span><i class="fa-solid fa-user"></i></span>
+                    </div>
                 </a>
                 <div class="dropdown-menu-right" aria-labelledby="navbarDropdown" ngbDropdownMenu>
                     <a class="btnClose hide-desktop" aria-label="Close" (click)="dropDownConta.close()">
@@ -550,6 +541,21 @@
                 </a>
             </div>
         </ng-template>
+        <div class="btn-group language-dropdown hide-mobile" ngbDropdown>
+            <button class="btn" type="button" id="dropdownLanguage" ngbDropdownToggle>
+                <span class="flag-icon {{linguagemSelecionada === 'pt' ? 'flag-icon-br' : 'flag-icon-us'}} flag-icon-squared"></span>
+            </button>
+            <div class="language-dropdown-menu position-absolute" aria-labelledby="dropdownLanguage" ngbDropdownMenu>
+                <a class="m-2 p-0 dropdown-item" (click)="useLanguage('pt')">
+                    <span class="flag-icon flag-icon-br flag-icon-squared"></span>
+                    {{'geral.portugues' | translate}}
+                </a>
+                <a class="m-2 p-0 dropdown-item" (click)="useLanguage('en')">
+                    <span class="flag-icon flag-icon-us flag-icon-squared"></span>
+                    {{'geral.ingles' | translate}}
+                </a>
+            </div>
+        </div>
     </div>
 </div>
 
