done obter o height do header dinamicamente para redimensionar a altura nas telas

--- a/src/app/shared/layout/app-layouts/loteria-layout.component.html
+++ b/src/app/shared/layout/app-layouts/loteria-layout.component.html
@@ -1,6 +1,6 @@
 <app-submenu category="loteria"></app-submenu>
 <div class="base-container">
-<!--    <app-navigation [headerHeight]="132"></app-navigation>-->
+<!--    <app-navigation></app-navigation>-->
     <main [ngClass]="{'collapsed': navigationIsCollapsed, 'uncollapsed': !navigationIsCollapsed}">
         <router-outlet></router-outlet>
     </main>
