--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -613,13 +613,18 @@
             </a>
         </div>
         <div class="category" *ngIf="cassinoAtivo">
-            <a [ngClass]="activeMenuCassinoLive()" [routerLink]="['/casino/cl']">
+            <a [ngClass]="activeMenuCassinoLive()" [routerLink]="['/casino/cl/']">
                 <span>{{'menu.cassino-aovivo' | translate}}</span>
             </a>
         </div>
         <div class="category" *ngIf="virtuaisAtivo">
             <a [routerLink]="['/casino/v']" routerLinkActive="active">
                 <span>{{'menu.virtuais' | translate}}</span>
+            </a>
+        </div>
+        <div class="category" *ngIf="parlaybayAtivo">
+            <a [routerLink]="['/casino/pb/play/real/170000/parlaybay']" routerLinkActive="active">
+                <span>PARLAYBAY</span>
             </a>
         </div>
         <div class="category" *ngIf="desafioHabilitado">
