--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -594,5 +594,10 @@
                 <span>{{'menu.loteria' | translate}}</span>
             </a>
         </div>
+        <div class="category" *ngIf="paginaPromocaoHabilitado">
+            <a [routerLink]="['/promocao']" routerLinkActive="active">
+                <span>{{'menu.promocao' | translate}}</span>
+            </a>
+        </div>
     </div>
 </ng-template>
