--- a/src/app/clientes/deposito/pix/deposito-pix.component.html
+++ b/src/app/clientes/deposito/pix/deposito-pix.component.html
@@ -44,8 +44,8 @@
                             </div>
                         </a>
                     </div>
-                    <div class="links-bonus">
-                        <a *ngIf="bonusCassino" class="opcao-bonus" [ngClass]="{'active':opcaoBonus === 'cassino'}" (click)="selecionarOpcaoBonus('cassino')">
+                    <div class="links-bonus" *ngIf="bonusCassino" >
+                        <a class="opcao-bonus" [ngClass]="{'active':opcaoBonus === 'cassino'}" (click)="selecionarOpcaoBonus('cassino')">
                             <div class="bonus">
                                 <i class="radio"></i>
                             </div>
