--- a/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.html
+++ b/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.html
@@ -1,2 +1,19 @@
-<p>promocao-form works!</p>
-2 <br> 2 <br> 2 <br> 2 <br> 2 <br> 2 <br> 2 <br>
+<div id="default-content">
+    <div class="wrap-stick">
+        <app-spinner *ngIf="showLoadingIndicator"></app-spinner>
+        <div *ngIf="!showLoadingIndicator">
+            <div class="desktop-image">
+                <img style="width: 100%; max-height: 240px;" src="https://weebet.s3.amazonaws.com/{{ SLUG }}/banners/{{ exibirImagem }}" alt="">
+            </div>
+            <div class="content-header">
+                <h2>{{ promocao.promocaoNome }}</h2>
+            </div>
+
+            <div class="content-body" #content id="print-section">
+                <div class="content" [innerHTML]="promocao.conteudo | safeHTML">
+                </div>
+            </div>
+            <app-footer></app-footer>
+        </div>
+    </div>
+</div>
