--- a/src/app/promocoes/promocao.component.html
+++ b/src/app/promocoes/promocao.component.html
@@ -2,33 +2,32 @@
     <div class="ssc-square title m-3 mt-4" style="height: 25px; width: 120px;"></div>
     <div class="ssc-square title m-3 mt-4" style="height: 15px; width: 400px;"></div>
     <div class="item-sample">
-        <div class="item-left">
-            <div class="ssc-square" style="width: 435px; height: 390px;"></div>
-        </div>
-        <div class="item-left">
-            <div class="ssc-square" style="width: 435px; height: 390px; margin-left: 18px;"></div>
-        </div>
-        <div class="item-left">
-            <div class="ssc-square" style="width: 435px; height: 390px; margin-left: 18px;"></div>
+        <div *ngFor="let item of [1, 2, 3]" class="item-left">
+            <div class="ssc-square"></div>
         </div>
     </div>
 </div>
-
+  
 <div id="promocoes-listagem" *ngIf="!isLoading">
     <div class="info-promotions">
         <h4><b>{{'menu.promocao' | translate}}</b></h4>
         <p>Aqui você encontrará todas as promoções ativas no momento em nossa plataforma</p>
     </div>
-    <div class="cards-container">
+    <div class="cards-container" style="margin-bottom: 30px;">
         <ng-container *ngFor="let promocao of promocoes">
-            <div class="custom-card">
-                <img src="https://www.marcusmarques.com.br/wp-content/uploads/2023/02/promocao.jpg" class="card-img-top" alt="Imagem do Card">
+            <div class="custom-card" (click)="goToDetails(promocao.id, true)">
+                <div class="logo-game-background">
+                    <span>{{ promocao.modalidade == 'cassino' ? 'Cassino' : 'Esportivo' }}</span>
+                </div>
+                <div class="card-image" style="min-height: 180px;">
+                    <img src="https://weebet.s3.amazonaws.com/{{ SLUG }}/banners/{{ promocao.imagemCard }}" class="card-img-top" alt="Imagem do Card">
+                </div>
                 <div class="card-body">
                     <h3 class="card-title"><b>{{ promocao.promocaoNome }}</b></h3>
                     <br>
                     <p class="card-text" style="flex-grow: 1;">{{ promocao.resumoDescricao }}</p>
                     <div>
-                        <a style="color: var(--highlight); cursor: pointer; font-size: 12px;" (click)="goTo()">Ver mais informações</a>
+                        <a style="color: var(--highlight); cursor: pointer; font-size: 12px;" (click)="goToDetails(promocao.id, false)">Ver mais informações</a>
                     </div>
                 </div>
             </div>
