criando pasta no s3 para guardar iamgens

--- a/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.html
+++ b/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.html
@@ -3,7 +3,7 @@
         <app-spinner *ngIf="showLoadingIndicator"></app-spinner>
         <div *ngIf="!showLoadingIndicator">
             <div class="desktop-image">
-                <img style="width: 100%; max-height: 240px;" src="https://weebet.s3.amazonaws.com/{{ SLUG }}/banners/{{ exibirImagem }}" alt="">
+                <img style="width: 100%; max-height: 240px;" src="https://weebet.s3.amazonaws.com/{{ SLUG }}/paginaPromocao/{{ exibirImagem }}" alt="">
             </div>
             <div class="content-header">
                 <h2>{{ promocao.promocaoNome }}</h2>
