--- a/src/app/promocoes/promocao.component.html
+++ b/src/app/promocoes/promocao.component.html
@@ -20,7 +20,7 @@
                     <span>{{ promocao.modalidade == 'cassino' ? 'Cassino' : 'Esportivo' }}</span>
                 </div>
                 <div class="card-image" style="min-height: 180px;">
-                    <img src="https://weebet.s3.amazonaws.com/{{ SLUG }}/banners/{{ promocao.imagemCard }}" class="card-img-top" alt="Imagem do Card">
+                    <img src="https://weebet.s3.amazonaws.com/{{ SLUG }}/paginaPromocao/{{ promocao.imagemCard }}" class="card-img-top" alt="Imagem do Card">
                 </div>
                 <div class="card-body">
                     <h3 class="card-title"><b>{{ promocao.promocaoNome }}</b></h3>
